classification
Title: wrong assumption in pystate.c
Type: crash Stage: committed/rejected
Components: Versions: Python 3.2, Python 3.1, Python 2.7
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: amaury.forgeotdarc, kristjan.jonsson, pitrou
Priority: normal Keywords: patch

Created on 2010-09-08 11:11 by pitrou, last changed 2010-09-08 12:49 by pitrou. This issue is now closed.

Files
File name Uploaded Description Edit
autotlskey.patch pitrou, 2010-09-08 11:11
autotlskey2.patch pitrou, 2010-09-08 11:57
Messages (4)
msg115858 - (view) Author: Antoine Pitrou (pitrou) * (Python committer) Date: 2010-09-08 11:11
pystate.c assumes that when autoTLSkey is 0, it hasn't been created yet. However, some TLS implementations can return 0 as a valid key value. Lots of interesting things then happen.

Here is a patch.
msg115860 - (view) Author: Amaury Forgeot d'Arc (amaury.forgeotdarc) * (Python committer) Date: 2010-09-08 11:49
Couldn't the patch use autoInterpreterState instead?
It is already modified at the same times as autoTLSkey.
msg115861 - (view) Author: Antoine Pitrou (pitrou) * (Python committer) Date: 2010-09-08 11:57
Ok, it is simpler indeed. Here is an updated patch.
msg115866 - (view) Author: Antoine Pitrou (pitrou) * (Python committer) Date: 2010-09-08 12:49
Committed in r84623 (3.x), r84627 (2.7) and r84628 (3.1).
History
Date User Action Args
2010-09-08 12:49:23pitrousetstatus: open -> closed
resolution: fixed
messages: + msg115866

stage: patch review -> committed/rejected
2010-09-08 11:57:00pitrousetfiles: + autotlskey2.patch

messages: + msg115861
2010-09-08 11:49:04amaury.forgeotdarcsetmessages: + msg115860
2010-09-08 11:12:37pitroulinkissue9786 dependencies
2010-09-08 11:11:20pitroucreate