Issue #9797: pystate.c wrongly assumed that zero couldn't be a valid thread-local storage key.